--- a/src/main/resources/templates/basic/services.html
+++ b/src/main/resources/templates/basic/services.html
@@ -15,12 +15,12 @@
   <div class="tab-wrapper">
     <div class="tabs mt-3" id="tabBar">
       <a class="tab" href="#vapt" data-tab="vapt">Vulnerability Assessment & Penetration Testing (VAPT)</a>
-      <a class="tab" href="#ca" data-tab="ca">Certifying Authority (CA)</a>
+      <a class="tab" href="#inc-response" data-tab="inc-response">Incident Response</a>
       <a class="tab" href="#it-audit" data-tab="it-audit">IT Audit & Risk Assessment</a>
       <a class="tab" href="#forensics" data-tab="forensics">Digital Forensics</a>
-      <a class="tab" href="#data-center" data-tab="data-center">Data Center Operations</a>
+      <!-- <a class="tab" href="#data-center" data-tab="data-center">Data Center Operations</a> -->
       <a class="tab" href="#cti" data-tab="cti">Cyber Threat Intelligence (CTI)</a>
-      <a class="tab" href="#cyber-gym" data-tab="cyber-gym">Training Program with Cyber Gym</a>
+      <a class="tab" href="#capacity" data-tab="capacity">Creating Awareness & Capacity Building</a>
     </div>
   </div>
   <div id="vapt" class="tab-content active m-1">
@@ -28,8 +28,8 @@
     <p><img th:src="@{/assets/images/service-sample (1).png}" /></p>
   </div>
 
-  <div id="ca" class="tab-content m-1">
-    <h2>Certifying Authority (CA)</h2>
+  <div id="inc-response" class="tab-content m-1">
+    <h2>Incident Response</h2>
     <p><img th:src="@{/assets/images/service-sample (2).png}" /></p>
   </div>
 
@@ -42,16 +42,16 @@
     <h2>Digital Forensics</h2>
     <p><img th:src="@{/assets/images/service-sample (4).png}" /></p>
   </div>
-  <div id="data-center" class="tab-content m-1">
+  <!-- <div id="data-center" class="tab-content m-1">
     <h2>Data Center Operations</h2>
     <p><img th:src="@{/assets/images/service-sample (5).png}" /></p>
-  </div>
+  </div> -->
   <div id="cti" class="tab-content m-1">
     <h2>Cyber Threat Intelligence (CTI)</h2>
     <p><img th:src="@{/assets/images/service-sample (6).png}" /></p>
   </div>
-  <div id="cyber-gym" class="tab-content m-1">
-    <h2>Training Program with Cyber Gym</h2>
+  <div id="capacity" class="tab-content m-1">
+    <h2>Creating Awareness & Capacity Building</h2>
     <p><img th:src="@{/assets/images/service-sample (1).png}" /></p>
   </div>
 
