--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -26,19 +26,28 @@
 
 <div class="header">
     <div class="header-left">
-      <div class="warning-bar">
-        <span>Cyber Crisis Warning Level</span>
-        <span id="currentDateTime"></span>
-        <span style="margin-left: 1rem; border-left: 20px solid yellowgreen; animation: warningpulse 1.5s infinite; color: #000;">.</span>
-        <span class="highlight">Attention</span>
+      <div class="warning-bar row">
+        <div class="col-md-8 p-2">
+          <div>Cyber Crisis Warning Level on</div>
+          <div id="currentDateTime"></div>
+        </div>
+        <div class="col-md-4 p-2">
+          <span style="margin-left: 1rem; border-left: 55px solid yellowgreen; animation: warningpulse 1.5s infinite; color: #000;">.</span>
+          <span class="highlight">Attention</span>
+        </div>
       </div>
-      <h1>From <span class="highlight">cyber threats</span> of the country and the people</h1>
+      <h1>From <span class="highlight">Cyber Threats</span> of the country and the people</h1>
       <p>We will keep you safe.</p>
     </div>
     <div class="slider-box" id="text-slider">
-      <h2>Reinforce the security of SME homepages</h2>
-      <p>Provide web vulnerability inspection and web security enhancement tools (Whistle Castle, Cyber Shelter) service for SMEs</p>
-      <a class="btn btn-dark" style="background-color:#3636b2; border-radius: 100px;">Explore</a>
+      <section class="hesec-hero" style="height: 150px; min-width: 100%;">
+        <div class="hesec-hero-content">
+            <p>Provide web vulnerability inspection and web security enhancement tools (Whistle Castle, Cyber Shelter) service for SMEs. Constantly monitor for threats and secure your system proactively.</p>
+        </div>
+      </section>
+      <h2></h2>
+      <p></p>
+      <a class="btn btn-dark" style="background-color:#3636b2; border-radius: 100px;"></a>
       <div class="dots" id="slider-dots"></div>
     </div>
   </div>
@@ -48,32 +57,32 @@
     <div class="slider-container">
       <div class="slider" id="service-slider">
         <a href="/service#vapt" class="service-item">
-            <img src="https://img.icons8.com/ios-filled/50/lock.png" alt="Caregiver" />
+            <img src="https://img.icons8.com/ios-filled/100/lock.png" alt="Caregiver" />
             <p>Vulnerability Assessment & Penetration Testing (VAPT)</p> 
         </a>
-        <a href="/service#ca" class="service-item">
-          <img src="https://img.icons8.com/ios-filled/50/security-checked.png" alt="Security Check" />
-          <p>Certifying Authority (CA)</p>
+        <a href="/service#inc-response" class="service-item">
+          <img src="https://img.icons8.com/ios-filled/100/security-checked.png" alt="Security Check" />
+          <p>Incident Response</p>
         </a>
         <a href="/service#it-audit" class="service-item">
-          <img src="https://img.icons8.com/ios-filled/50/domain.png" alt="SME" />
+          <img src="https://img.icons8.com/ios-filled/100/domain.png" alt="SME" />
           <p>IT Audit & Risk Assessment</p>
         </a>
         <a href="/service#forensics" class="service-item">
-          <img src="https://img.icons8.com/ios-filled/50/skull.png" alt="Digital Forensics Icon" />
+          <img src="https://img.icons8.com/pastel-glyph/100/view.png" alt="Digital Forensics Icon" />
           <p>Digital Forensics</p>
         </a>
-        <a href="/service#data-center" class="service-item">
-          <img src="https://img.icons8.com/ios-filled/50/cloud.png" alt="C-TAS" />
+        <!-- <a href="/service#data-center" class="service-item">
+          <img src="https://img.icons8.com/ios-filled/100/cloud.png" alt="C-TAS" />
           <p>Data Center Operations</p>
-        </a>
+        </a> -->
         <a href="/service#cti" class="service-item">
-          <img src="https://img.icons8.com/ios-filled/50/monitor.png" alt="Mock Training" />
+          <img src="https://img.icons8.com/ios-filled/100/monitor.png" alt="Mock Training" />
           <p>Cyber Threat Intelligence (CTI)</p>
         </a>
-        <a href="/service#cyber-gym" class="service-item">
-          <img src="https://img.icons8.com/ios-filled/50/folder-invoices.png" alt="Training Platform" />
-          <p>Training Program with Cyber Gym</p>
+        <a href="/service#capacity" class="service-item">
+          <img src="https://img.icons8.com/ios-filled/100/folder-invoices.png" alt="Training Platform" />
+          <p>Creating Awareness & Capacity Building</p>
         </a>
       </div>
       <div class="nav-arrows">
@@ -90,33 +99,6 @@
   </div>
 </section> -->
 <section class="container mt-5">
-  <div class="hesec-description container">
-      <h2>Description</h2>
-      <p>In response to the cyber-attack on Bangladesh Bank in February 2016, 
-          the Government of Bangladesh's Computer Incident Response Team, 
-          known as BGD e-GOV CIRT, was established in March 2016 under 
-          Section 6 of the BCC Act 1990, as a proactive initiative
-           by the Information and Communication Technology Division.
-      <br>Also, Section 9 of the Cyber Security Act, 2023 directs the formation of a 
-          National Computer Emergency Response Team (N-CERT) under the 
-          National Cyber Security Agency. BGD e-GOV CIRT has been given additional 
-          responsibility of National Computer Emergency Response Team as per Office 
-          Order of Information and Communication Technology Department.
-      <br>National Data Center and network connectivity between all government
-       offices across the country has been setup to deliver e-services
-        at citizen's doorsteps. National Data Centers and online services 
-        of financial institutions are being hit by various cyber attacks. 
-        BGD e-GOV CIRT is conducting necessary activities under BCC to protect Critical 
-        Information Infrastructure (CII) from all these attacks.
-      <br>BGD e-GOV CIRT is responsible for maintaining cooperation and communication 
-          with international organizations, forums and CERT/CSIRT/CIRT of other 
-          countries engaged in cyber security for the purpose of securing the cyber 
-          space of Bangladesh.
-      <br>Bangladesh is currently ranked 36th in the National 
-      Cybersecurity Index and recognized as a Tier-1 Role Model country in the 
-      Global Cybersecurity Index (GCI) 2024, published by the International 
-      Telecommunication Union (ITU).</p>
-  </div>
   <div class="container">
       <h2>Latest Alerts</h2>
       <div class="row">
@@ -206,7 +188,7 @@
 <script>
     updateClock();
     setInterval(updateClock, 30000);
-
+    //let myVar = [[${someThymeleafVar}]];
     let slider = $("#service-slider");
     let itemWidth = $('.service-item').outerWidth(true);
     let currentPos = 0;
@@ -228,10 +210,10 @@
     sliderData.forEach((_, index) => {
       $("#slider-dots").append(`<div class="dot" data-index="${index}"></div>`);
     });
-    $(".dot").eq(0).addClass("active");
+    //$(".dot").eq(0).addClass("active");
     let currentSlide = 0;
     setInterval(() => {
-      currentSlide = (currentSlide + 1) % sliderData.length;
+      currentSlide = currentSlide  % sliderData.length;
       const data = sliderData[currentSlide];
 
       $("#text-slider h2").fadeOut(300, function () {
@@ -242,8 +224,18 @@
         $(this).text(data.text).fadeIn(300);
       });
 
+      $("#text-slider a").fadeOut(300, function () {
+        $(this).prop("href", data.url).fadeIn(300);
+      });
+
+      $("#text-slider a").fadeOut(300, function () {
+        $(this).text("Explore").fadeIn(300);
+      });
+
       $(".dot").removeClass("active");
       $(".dot").eq(currentSlide).addClass("active");
+      currentSlide++;
+      $(".hesec-hero").slideUp();
     }, 5000);
 
     $(".dot").on("click", function () {
@@ -253,9 +245,14 @@
       $("#text-slider h2").fadeOut(300, function () {
         $(this).text(data.title).fadeIn(300);
       });
-
       $("#text-slider p").fadeOut(300, function () {
         $(this).text(data.text).fadeIn(300);
+      });
+      $("#text-slider a").fadeOut(300, function () {
+        $(this).prop("href", data.url).fadeIn(300);
+      });
+      $("#text-slider a").fadeOut(300, function () {
+        $(this).text("Explore").fadeIn(300);
       });
 
       $(".dot").removeClass("active");
