--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -27,22 +27,18 @@
       </div>
       <!-- Navigation Links -->
       <div class="col-lg-3 col-md-6 mb-4">
-        <h5 class="text-head">Navigation</h5>
-        <ul class="list-unstyled">
-          <li><a href="#" class="text-light">Home</a></li>
-          <li><a href="#" class="text-light">Discover</a></li>
-          <li><a href="#" class="text-light">Contact</a></li>
-          <li><a href="#" class="text-light">Advisories</a></li>
-        </ul>
+        
       </div>
       <!-- Additional Links -->
       <div class="col-lg-3 col-md-6 mb-4">
-        <h5 class="text-head">Resources</h5>
+        <h5 class="text-head">Quick Navigation</h5>
         <ul class="list-unstyled">
-          <li><a href="#" class="text-light">Advisories</a></li>
-          <li><a href="#" class="text-light">Notice</a></li>
-          <li><a href="#" class="text-light">Contact</a></li>
-          <li><a href="#" class="text-light">News & Events</a></li>
+          <li><a href="/report-incident" class="text-light">Report Incident</a></li>
+          <li><a href="/advisories" class="text-light">Advisories</a></li>
+          <li><a href="/alerts" class="text-light">Alerts</a></li>
+          <li><a href="/notices" class="text-light">Notices</a></li>
+          <li><a href="/guidelines" class="text-light">Guidelines</a></li>
+          <li><a href="/policies" class="text-light">Policies</a></li>
         </ul>
       </div>
       <!-- Social Media Icons Section -->
