--- a/src/main/resources/templates/admin/admin-home.html
+++ b/src/main/resources/templates/admin/admin-home.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" th:href="@{/assets/css/header-styles.css}">
   <link rel="stylesheet" th:href="@{/assets/css/footer-styles.css}">
   <link rel="stylesheet" th:href="@{/assets/css/admin-header.css}">
-
+  <link rel="stylesheet" th:href="@{/assets/css/form.css}">
 
   <style>
     /* Custom styles (optional) */
@@ -25,6 +25,37 @@
 <div th:replace="~{fragments/header :: menu}"></div>
 <div th:replace="~{fragments/admin-header :: menu}"></div>
 
+<div class="form-wrapper">
+  <form id="incidentForm" th:object="${content}" th:action="@{/admin/home}" method="post">
+      <div class="form-section">
+        <div class="mb-3">
+          <h5 class="form-label">Cyber Crisis Warning Label: </h5>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" th:field="*{warningLabel}" id="relax" value="Relaxing|#0574cf">
+            <label class="form-check-label" for="relax" style="color: #0574cf; font-weight: bold;">Relaxing</label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" th:field="*{warningLabel}" id="attention" value="Attention|#029d30">
+            <label class="form-check-label" for="attention" style="color: #029d30; font-weight: bold;">Attention</label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" th:field="*{warningLabel}" id="alarming" value="Alarming|#c7e504">
+            <label class="form-check-label" for="alarming" style="color: #c7e504; font-weight: bold;">Alarming</label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="radio" th:field="*{warningLabel}" id="danger" value="Dangerous|#cf3a05">
+            <label class="form-check-label" for="danger" style="color: #cf3a05; font-weight: bold;">Dangerous</label>
+          </div>
+        </div>
+        <div class="mb-3">
+          <h5 class="form-label"> Highlight Contents </h5>
+          <label for="name" class="form-label">In Json Format</label>
+          <textarea type="text" class="form-control" id="name" placeholder="John Doe" rows="20" th:text="*{highlights}" name="highlights"></textarea>
+        </div>
+      </div>
+      <button type="submit" value="Save" class="btn btn-lg btn-danger"> Save Content </button>
+  </form>
+</div>
 <div th:replace="~{fragments/footer :: footer}"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
