--- a/src/main/resources/templates/post/single-post.html
+++ b/src/main/resources/templates/post/single-post.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" th:href="@{/assets/css/header-styles.css}">
     <link rel="stylesheet" th:href="@{/assets/css/footer-styles.css}">
     <link rel="stylesheet" th:href="@{/assets/css/single-post.css}">
+    <link th:href="@{/assets/images/favicon.ico}" rel="icon">
 </head>
 
 <body>
